<resources>
    <string name="app_name">Investr</string>
    <string name="facebook_app_id">838597502973620</string>
    <string name="gcm_sender_id">id:873113403098</string>
    <string name="fb_login_protocol_scheme">fb838597502973620</string>
    <string name="parse_app_id">investrAndroid</string>
    <string name="parse_server_url">https://investr-android.herokuapp.com/parse</string>
    <string name="rankings">Rankings</string>
    <string name="portfolio">Portfolio</string>
    <string name="marketplace">Marketplace</string>
    <string name="all_competitions">All Competitions</string>
    <string name="research">Research</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter_asset_name">Enter Asset Name...</string>
    <string name="search">Search</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="foreign_currency">Foreign Currency</string>
    <string name="stock">Stock</string>
    <string name="currency">Currency</string>
    <string name="commodities">Commodities</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_competition">Create a Competition</string>
    <string name="empty" />
    <string name="name">Name</string>
    <string name="enter_name">Enter Competition Name...</string>
    <string name="starting_date">Starting Date</string>
    <string name="select_starting_date">Select Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="select_ending_date">Select Ending Date</string>
    <string name="select_starting_amount">Select Starting Amount</string>
    <string name="search_players">Search Players</string>
    <string name="distance">Distance</string>
    <string name="done">Done</string>
    <string name="undo">UNDO</string>
</resources>
