<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rankings_fragment"
            android:icon="@mipmap/ic_launcher"
            android:checked="true"
            android:title="@string/rankings" />
        <item
            android:id="@+id/nav_portfolio_fragment"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/portfolio" />
        <item
            android:id="@+id/nav_marketplace_fragment"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/marketplace" />
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/all_competitions" />
    </group>

</menu>