<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createCompetition"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"  >
    <TextView
        android:id="@+id/tvCreateCompetitionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_competition" />

    <TextView
        android:id="@+id/tvCreateCompetitionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty" />

    <EditText
        android:id="@+id/etCreateCompetitionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCreateCompetitionStartDateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starting_date" />

    <EditText
        android:id="@+id/etCreateCompetitionStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false"
        android:hint="@string/select_starting_date" />

    <TextView
        android:id="@+id/tvCreateCompetitionEndDateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ending_date" />

    <EditText
        android:id="@+id/etCreateCompetitionEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:hint="@string/select_ending_date" />

    <TextView
        android:id="@+id/tvCreateCompetitionStartingAmountTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_starting_amount" />

    <SeekBar
        android:id="@+id/sbCreateCompetitionStartingAmount"
        android:min="1"
        android:max="100"
        android:progress="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCreateCompetitionStartingAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCreateCompetitionCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btnCreateCompetitionNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>