<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.investrapp.investr.fragments.RankingsFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/rlMarketplace">


        <EditText
            android:id="@+id/etMarketplaceSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_asset_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_toStartOf="@+id/btnMarketplaceSearch" />

        <Button
            android:id="@+id/btnMarketplaceSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />

        <CheckBox
            android:id="@+id/cbCryptocurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cryptocurrency"
            android:layout_below="@+id/btnMarketplaceSearch"
            android:layout_alignStart="@+id/etMarketplaceSearch" />

        <CheckBox
            android:id="@+id/cbForeignCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:layout_below="@+id/cbStocks"
            android:layout_alignStart="@+id/cbStocks" />

        <CheckBox
            android:id="@+id/cbStocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock"
            android:layout_alignBaseline="@+id/cbCryptocurrency"
            android:layout_alignBottom="@+id/cbCryptocurrency"
            android:layout_toEndOf="@+id/cbCommodities"
            android:layout_marginStart="34dp" />

        <CheckBox
            android:id="@+id/cbCommodities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodities"
            android:layout_below="@+id/cbCryptocurrency"
            android:layout_alignStart="@+id/cbCryptocurrency" />


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/flMarketplaceSearchResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlMarketplace">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAssets"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>


</RelativeLayout>
